--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "test",
     "start": "node server.js",
+    "watch" :"nodemon"
   },
   "repository": {
     "type": "git",
